<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/WelcomeImage"
        android:layout_width="320dp"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        android:src="@drawable/welcomescreenimage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"
        android:contentDescription="welcomeImage"/>

    <TextView
        android:id="@+id/WelcomeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/WelcomeImage"
        app:layout_constraintStart_toStartOf="@id/WelcomeImage"
        app:layout_constraintEnd_toEndOf="@id/WelcomeImage"
        android:layout_marginTop="20dp"
        android:text="@string/label_hello_screen"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        android:textSize="23sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/AuthorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/WelcomeLabel"
        app:layout_constraintStart_toStartOf="@id/WelcomeLabel"
        app:layout_constraintEnd_toEndOf="@id/WelcomeLabel"
        android:layout_marginTop="10dp"
        android:text="@string/label_authors"
        android:fontFamily="sans-serif-medium"
        android:textSize="16sp"
        android:textAlignment="center"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/RegistrationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/AuthorLabel"
        app:layout_constraintStart_toStartOf="@id/AuthorLabel"
        app:layout_constraintEnd_toEndOf="@id/AuthorLabel"
        android:layout_marginTop="30dp"
        android:text="@string/registration"
        android:fontFamily="sans-serif-medium"
        android:textAlignment="center"
        android:textSize="12sp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/LoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/RegistrationButton"
        app:layout_constraintStart_toStartOf="@id/RegistrationButton"
        app:layout_constraintEnd_toEndOf="@id/RegistrationButton"
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/login"
        android:textSize="11sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>